--- a/task3.html
+++ b/task3.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Проста HTML-сторінка</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 50px;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>Привіт, світ!</h1>
+    <p>Це проста веб-сторінка на HTML.</p>
+
+    <button onclick="showMessage()">Натисни мене</button>
+
+    <script>
+        function showMessage() {
+            alert("Вітаю! Ви натиснули кнопку.");
+        }
+    </script>
+
+</body>
+</html>
 
